--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,ggplot)
 importFrom(magrittr,"%>%")
+importFrom(stats,sd)
